[tool.poetry]
name = "reinforcement-learning-xlsindy"
version = "0.1.0"
description = "The main repository for experimenting with XL sindy and reinforcement learning"
authors = ["CHAUCHAT EYMERIC <chauchat.eymeric.r7@dc.tohoku.ac.jp>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
py-xl-sindy = {path = "../py-xl-sindy", develop = true}
# py-xl-sindy = "^1.0.1"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
sympy = "^1.13.3"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
